--- a/index.html
+++ b/index.html
@@ -111,55 +111,57 @@
       <div class="container-fluid bg font-color-w pt-5">
         <div class="row">
             <div class="col-md pl-5">
-              <div class="row">
-                <div class="col-2 flex-column pt-5">
-                    <div class="pb-5 d-flex justify-content-center"><a href="#aboutJumpTo" style="font-size:medium; color:#ffffff;">about me</a></div>
-                    <div class="pb-5 d-flex justify-content-center"><a href="#experienceJumpTo" style="font-size:medium; color:#ffffff;">experience</a></div>
-                    <div class="pb-5 d-flex justify-content-center"><a href="#projectsJumpTo" style="font-size:medium; color:#ffffff;">projects</a></div>
-                 
-                  <div class="d-flex justify-content-center pb-5">
-                    <a href="https://www.github.com/justincamp1776/" target="_blank"><i class="fab fa-git-hub">
-                      <img src="images/github-mark-white.png" alt="github-logo" style="max-width:35px; max-height:35px;"/>
-                    </i></a>
-                  </div>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://www.linkedin.com/in/justcamp1776/" target="_blank"><i class="fab fa-git-hub">
-                      <img src="images/in.png" alt="linkedin-logo" style="max-width:80px; max-height:80px;"/>
-                    </i></a>
-                  </div>
-                </div>
-                <div class="col-10">                  <div class="card border-0 pb-5 pt-3" style="width: 18rem; background-color:rgb(18, 18, 46);">
-                    <img class="card-img-top ml-4" src="images/nixon.jpg" style="border-radius:2.5%" alt="Card image cap">
-                    <div class="card-body ">
-                      <h2 class="card-title d-flex justify-content-center" id="name"></h2>
-                      <p class="font-weight-light d-flex justify-content-center" id="title"></p>
-                      <p class="card-text font-italic d-flex justify-content-center" id="description"></p>
-                      <div class="border-bottom border-warning pl-5"></div>
+                    <div class="row">
+                      <div class="col-2 flex-column pt-5">
+                          <div class="pb-5 d-flex justify-content-center"><a href="#aboutJumpTo" style="font-size:medium; color:#ffffff;">about</a></div>
+                          <div class="pb-5 d-flex justify-content-center"><a href="#experienceJumpTo" style="font-size:medium; color:#ffffff;">experience</a></div>
+                          <div class="pb-5 d-flex justify-content-center"><a href="#projectsJumpTo" style="font-size:medium; color:#ffffff;">projects</a></div>
+                          <div class="d-flex justify-content-center pb-5">
+                            <a href="https://www.github.com/justincamp1776/" target="_blank"><i class="fab fa-git-hub">
+                              <img src="images/github-mark-white.png" alt="github-logo" style="max-width:35px; max-height:35px;"/>
+                            </i></a>
+                          </div>
+                          <div class="d-flex justify-content-center">
+                            <a href="https://www.linkedin.com/in/justcamp1776/" target="_blank"><i class="fab fa-git-hub">
+                              <img src="images/in.png" alt="linkedin-logo" style="max-width:80px; max-height:80px;"/>
+                            </i></a>
+                          </div>
+                      </div>
+                      <div class="col-10"> 
+                        <img class="card-img-top ml-4 pr-2" src="images/nixon.jpg" style="width: 18rem;" alt="Card image cap">
+                      </div>
                     </div>
+                <div class="row pt-5">
+                  <div class="col-8 d-flex justify-content-center pt-5">
+                    <div class="card border-0 pb-5 pt-3" style="background-color:rgb(18, 18, 46); white-space: nowrap;">
+                      <div class="card-body">
+                        <h2 class="card-title d-flex justify-content-start" id="name"></h2>
+                        <h5 class="font-weight-light d-flex justify-content-start"  id="title"></h5>
+                        <div class="border-bottom border-warning"></div>
+                        <p class="font-weight-light d-flex justify-content-start pt-4" style="font-size:large;"id="description"></p>
+                      </div>
                   </div>
                 </div>
                 </div>
-
               </div>
-              
               <div class="col-md d-flex justify-content-center" >
                 <div class="contentBox">
-                  <div class="row mb-2 w-100 border-bottom border-white">
-                  <a id="aboutJumpTo"><h5 class="align-text-bottom font-italic font-weight-light">About Me</h5></a>
+                  <div class="row mb-5 w-100">
+                  <a id="aboutJumpTo"><h5 class="align-text-bottom font-italic font-weight-light ml-2">About Me</h5></a>
                   </div>
                   <div class="justify-content-around font-weight-light mb-3"id="about"></div>
                   <div class="row mt-5 mb-2 w-100 border-bottom border-warning">
-                    <a id="experienceJumpTo"><h5 class="align-text-bottom font-italic font-weight-light">Experience</h5></a>
+                    <a id="experienceJumpTo"><h5 class="align-text-bottom font-italic font-weight-light ml-2">Experience</h5></a>
                   </div>
                   <div class="list-group" id="expList"></div>
                   <div class="row mt-5 mb-2 w-100 border-bottom border-white">
-                  <a id="projectsJumpTo"><h5 class="mt-4 align-text-bottom font-italic font-weight-light">Projects</h5></a>
+                  <a id="projectsJumpTo"><h5 class="mt-4 align-text-bottom font-italic font-weight-light ml-2">Projects</h5></a>
                   </div>
                   <div class="list-group" id="projList"></div>
                 </div>
               </div>
+            </div>
         </div>
-      </div>
       <div class="bg-dark">
           <div class="container-fluid align-items-center font-color-w pb-5" style="min-height: 200px;">
             <div class="row d-flex justify-content-between pt-5 pl-4 pb-5">
