--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Justin Campbell</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="stylesheet" href="styles/style.css">
     <script src="data.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <script>
 
       $(document).ready(function () {
@@ -112,38 +113,51 @@
         <div class="row">
             <div class="col-md pl-5">
                     <div class="row">
-                      <div class="col-2 flex-column pt-5">
-                          <div class="pb-5 d-flex justify-content-center"><a href="#aboutJumpTo" style="font-size:medium; color:#ffffff;">about</a></div>
-                          <div class="pb-5 d-flex justify-content-center"><a href="#experienceJumpTo" style="font-size:medium; color:#ffffff;">experience</a></div>
-                          <div class="pb-5 d-flex justify-content-center"><a href="#projectsJumpTo" style="font-size:medium; color:#ffffff;">projects</a></div>
-                          <div class="d-flex justify-content-center pb-5">
-                            <a href="https://www.github.com/justincamp1776/" target="_blank"><i class="fab fa-git-hub">
-                              <img src="images/github-mark-white.png" alt="github-logo" style="max-width:35px; max-height:35px;"/>
-                            </i></a>
+                          <div class="col-md-2 flex-column pb-3">
+                            <p>
+                              <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" active="true">
+                                menu
+                              </button>
+                            </p>
+                            <div class="collapse" id="collapseExample">
+                              <div class="bg2">
+                                <div class="pb-5 d-flex justify-content-center collapse-start"><a href="#aboutJumpTo" style="font-size:medium; color:#ffffff;">about</a></div>
+                                <div class="pb-5 d-flex justify-content-center collapse-start"><a href="#experienceJumpTo" style="font-size:medium; color:#ffffff;">experience</a></div>
+                                <div class="pb-5 d-flex justify-content-center collapse-start"><a href="#projectsJumpTo" style="font-size:medium; color:#ffffff;">projects</a></div>
+                                <div class="d-flex justify-content-center collapse-start pb-5">
+                                  <a href="https://www.github.com/justincamp1776/" target="_blank"><i class="fab fa-git-hub">
+                                    <img src="images/github-mark-white.png" alt="github-logo" style="max-width:35px; max-height:35px;"/>
+                                  </i></a>
+                                </div>
+                                <div class="d-flex justify-content-center collapse-start">
+                                  <a href="https://www.linkedin.com/in/justcamp1776/" target="_blank"><i class="fab fa-git-hub">
+                                    <img src="images/in.png" alt="linkedin-logo" style="max-width:80px; max-height:80px;"/>
+                                  </i></a>
+                                </div>
+                              </div>
+                            </div>
                           </div>
-                          <div class="d-flex justify-content-center">
-                            <a href="https://www.linkedin.com/in/justcamp1776/" target="_blank"><i class="fab fa-git-hub">
-                              <img src="images/in.png" alt="linkedin-logo" style="max-width:80px; max-height:80px;"/>
-                            </i></a>
-                          </div>
-                      </div>
-                      <div class="col-10"> 
-                        <img class="card-img-top ml-4 pr-2" src="images/nixon.jpg" style="width: 18rem;" alt="Card image cap">
+                        <div class="col-md-10"> 
+                            <div class="row ">
+                              <div class="col-12 d-flex justify-content-start">
+                                <img class="card-img-top collapse-center" src="images/nixon.jpg" style="width: 22rem;" alt="Card image cap">
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col-8 d-flex justify-content-start pt-5">
+                                <div class="card border-0 pb-5 pt-3" style="background-color:rgb(18, 18, 46); white-space: nowrap;">
+                                  <div class="card-body">
+                                    <h2 class="card-title d-flex justify-content-start" id="name"></h2>
+                                    <h5 class="font-weight-light d-flex justify-content-start"  id="title"></h5>
+                                    <div class="border-bottom border-warning"></div>
+                                    <p class="font-weight-light d-flex justify-content-start pt-4" style="font-size:large; "id="description"></p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
                       </div>
                     </div>
-                <div class="row pt-5">
-                  <div class="col-8 d-flex justify-content-center pt-5">
-                    <div class="card border-0 pb-5 pt-3" style="background-color:rgb(18, 18, 46); white-space: nowrap;">
-                      <div class="card-body">
-                        <h2 class="card-title d-flex justify-content-start" id="name"></h2>
-                        <h5 class="font-weight-light d-flex justify-content-start"  id="title"></h5>
-                        <div class="border-bottom border-warning"></div>
-                        <p class="font-weight-light d-flex justify-content-start pt-4" style="font-size:large; "id="description"></p>
-                      </div>
-                  </div>
-                </div>
-                </div>
-              </div>
               <div class="col-md d-flex justify-content-center" >
                 <div class="contentBox">
                   <div class="row mb-5 w-100">
@@ -178,9 +192,12 @@
             </div>
           </div>
       </div>
-        <div class="row justify-content-around" style="max-height:5px;">
-          <p class="pt-5"><span>&copy; </span> 2023 All rights are reserved.</p>
-          <div><p class="pt-5">Baltimore, MD 21228</p></div>
+        <div class="row " style="max-height:5px;">
+          <div class="col-md-6 pt-1">
+            <p class="d-flex justify-content-center"><span>&copy; </span> 2023 All rights are reserved.</p>
+          </div>
+          <div class="col-md-6 pt-1">
+            <p class="d-flex justify-content-center">Baltimore, MD </p>
         </div>
     </body>
 </html>
