--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                   '<div class="col-lg-3 mb-2">' +
                   '<p class="mb-1 font-italic">'+ obj.startDate + " - " + obj.endDate +'</p>'+
                   '<p class="mb-1">'+ obj.location +'</p>'+
+
                   '</div>'+
                   '<div class="col-lg-9 border-left border-secondary text-wrap">'+
                     '<div class="row mb-1">'+
@@ -110,13 +111,13 @@
   </head>
   <body>
       <div class="container-fluid bg font-color-w">
-        <div class="row d-flex justify-content-center pt-1" style="opacity: 25%;">
-          <div class="col-8 d-flex justify-content-around" style="letter-spacing: 2em;">
-            <h1>Design</h1>
-            <h1>-</h1>
-            <h1>Build</h1>
-            <h1>-</h1>
-            <h1>Deploy</h1>
+        <div class="row d-flex justify-content-center pt-1 pb-5">
+          <div class="col-8 d-flex justify-content-around header resize-header" style="letter-spacing: 2em;">
+            <div style="font-size:xx-large">Design</div>
+            <div style="font-size:xx-large">-</div>
+            <div style="font-size:xx-large">Build</div>
+            <div style="font-size:xx-large">-</div>
+            <div style="font-size:xx-large">Deploy</div>
           </div>
         </div>
         <div class="row pt-5">
@@ -146,33 +147,33 @@
                               </div>
                             </div>
                           </div>
-                        <div class="col-md-10"> 
-                            <div class="row ">
-                              <div class="col-12 d-flex justify-content-start">
-                                <img class="card-img-top collapse-center" src="images/nixon.jpg" style="width: 22rem;" alt="Card image cap">
+                            <div class="col-md-8"> 
+                              <div class="row ">
+                                <div class="col-12 d-flex justify-content-start">
+                                  <img class="card-img-top collapse-center" src="images/nixon.jpg" style="width: 22rem;" alt="Card image cap">
+                                </div>
                               </div>
-                            </div>
-                            <div class="row">
-                              <div class="col-8 d-flex justify-content-start pt-5">
-                                <div class="card border-0 pb-5 pt-3" style="background-color:rgb(18, 18, 46); white-space: nowrap;">
-                                  <div class="card-body">
-                                    <h2 class="card-title d-flex justify-content-start" id="name"></h2>
-                                    <h5 class="font-weight-light d-flex justify-content-start"  id="title"></h5>
-                                    <div class="border-bottom border-warning"></div>
-                                    <p class="font-weight-light d-flex justify-content-start pt-4" style="font-size:large; "id="description"></p>
+                              <div class="row">
+                                <div class="col-8 d-flex justify-content-start pt-5">
+                                  <div class="card border-0 pb-5 pt-3" style="background-color:rgb(18, 18, 46); white-space: nowrap;">
+                                    <div class="card-body">
+                                      <h2 class="card-title d-flex justify-content-start" id="name"></h2>
+                                      <h5 class="font-weight-light d-flex justify-content-start"  id="title"></h5>
+                                      <div class="border-bottom border-warning"></div>
+                                      <p class="font-weight-light d-flex justify-content-start pt-4" style="font-size:large; "id="description"></p>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
                             </div>
-                        </div>
                       </div>
                     </div>
               <div class="col-md d-flex justify-content-center" >
                 <div class="contentBox">
                   <div class="row mb-5 w-100">
-                  <a id="aboutJumpTo"><h5 class="align-text-bottom font-italic font-weight-light ml-2">About Me</h5></a>
+                  <a id="aboutJumpTo"><h5 class="align-text-bottom font-italic font-weight-light ml-2" style="letter-spacing: .3em;">About Me</h5></a>
                   </div>
-                  <div class="justify-content-around font-weight-light mb-3"id="about"></div>
+                  <div class="justify-content-around font-weight-light mb-3"id="about" style="letter-spacing:.13em;"></div>
                   <div class="row mt-5 mb-2 w-100 border-bottom border-warning">
                     <a id="experienceJumpTo"><h5 class="align-text-bottom font-italic font-weight-light ml-2">Experience</h5></a>
                   </div>
@@ -190,8 +191,9 @@
             <div class="row d-flex justify-content-between pt-5 pl-4 pb-5">
               <div class="col-md-4 offset-md-1">
                 <ul class="list-unstyled">
-                  <li><a class="font-color-w" href="#">Resume</a></li>
-                  <li><a class="font-color-w" href="#">Projects</a></li>
+                  <li><a class="font-color-w" href="#aboutJumpTo">About</a></li>
+                  <li><a class="font-color-w" href="#experienceJumpTo">Experience</a></li>
+                  <li><a class="font-color-w" href="#projectsJumpTo">Projects</a></li>
                   <li><a class="font-color-w" href="#">Contact</a></li>
                 </ul>
               </div>
