--- a/index.html
+++ b/index.html
@@ -9,12 +9,48 @@
 
     <link rel="stylesheet" href="styles/style.css">
     <script src="data.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="commonFunctions.js"></script>
+    <script src="keys.json"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <script>
 
       $(document).ready(function () {
+        getContent();
+        $.ajax({
+          type: "GET",
+          url: getApiUrl() + "/items",
+          data: null,
+          origin: "https://justin-campbell.com",
+          contentType: "application/json, charset=utf-8",
+          dataType: "JSON",
+          success: function (response){
+            getViewCountCallback(response);
+          },
+          failure: function (response){
+              alert("Unable to retrieve view count at this time. Please try again later.");
+          },
+          error: function (response){
+            //getViewCountCallback(response);
+              alert("An error has occured while retrieving site hit count.");
+          },
+        });
+      });
+
+      function getViewCountCallback(data){
+        //let countArr = data[0].split("");
+        //let testNum = "11";
+        //alert("  "+data);
+        $("#hitCount").append('<div class="counter font-weight-bold"> Hit Count: '+ data +'</div>');
+       
+        /*let countArr = testNum.split("");
+        for(var i=0; i<=countArr.length-1; i++){
+          $("#hitCount").append('<div class="col-1 counter font-bold">'+ countArr[i] +'</div>')
+        }*/
+      }
+
+      function getContent(){
         let intro     = getIntro();
         let about     = getAbout();
         let exp       = getExperience();
@@ -23,9 +59,7 @@
         render(exp);
         render(about);
         render(projects);
-        
-
-      });
+      }
 
 
       function render(data){
@@ -61,7 +95,6 @@
                   '<div class="col-lg-3 mb-2">' +
                   '<p class="mb-1 font-italic">'+ obj.startDate + " - " + obj.endDate +'</p>'+
                   '<p class="mb-1">'+ obj.location +'</p>'+
-
                   '</div>'+
                   '<div class="col-lg-9 border-left border-secondary text-wrap">'+
                     '<div class="row mb-1">'+
@@ -111,13 +144,13 @@
   </head>
   <body>
       <div class="container-fluid bg font-color-w">
-        <div class="row d-flex justify-content-center pt-1 pb-5">
-          <div class="col-8 d-flex justify-content-around header resize-header" style="letter-spacing: 2em;">
-            <div style="font-size:xx-large">Design</div>
-            <div style="font-size:xx-large">-</div>
-            <div style="font-size:xx-large">Build</div>
-            <div style="font-size:xx-large">-</div>
-            <div style="font-size:xx-large">Deploy</div>
+        <div class="row d-flex justify-content-center pt-3 pb-5">
+          <div class="col-8 d-flex justify-content-around header resize-header pb-5" style="letter-spacing: 2em;">
+            <div>Design</div>
+            <div>-</div>
+            <div>Build</div>
+            <div>-</div>
+            <div>Deploy</div>
           </div>
         </div>
         <div class="row pt-5">
@@ -153,23 +186,27 @@
                                   <img class="card-img-top collapse-center" src="images/nixon.jpg" style="width: 22rem;" alt="Card image cap">
                                 </div>
                               </div>
-                              <div class="row">
-                                <div class="col-8 d-flex justify-content-start pt-5">
-                                  <div class="card border-0 pb-5 pt-3" style="background-color:rgb(18, 18, 46); white-space: nowrap;">
-                                    <div class="card-body">
-                                      <h2 class="card-title d-flex justify-content-start" id="name"></h2>
-                                      <h5 class="font-weight-light d-flex justify-content-start"  id="title"></h5>
-                                      <div class="border-bottom border-warning"></div>
-                                      <p class="font-weight-light d-flex justify-content-start pt-4" style="font-size:large; "id="description"></p>
+                                <div class="row">
+                                  <div class="col-8 d-flex justify-content-start pt-5">
+                                    <div class="card border-0 pt-3" style="background-color:rgb(18, 18, 46); white-space: nowrap;">
+                                      <div class="card-body">
+                                        <h2 class="card-title d-flex justify-content-start" id="name"></h2>
+                                        <h5 class="font-weight-light d-flex justify-content-start"  id="title"></h5>
+                                        <div class="border-bottom border-warning"></div>
+                                        <p class="font-weight-light d-flex justify-content-start pt-4" style="font-size:large; "id="description"></p>
+                                      </div>
                                     </div>
                                   </div>
                                 </div>
-                              </div>
-                            </div>
-                      </div>
+                          </div>
+                          </div>
                     </div>
               <div class="col-md d-flex justify-content-center" >
                 <div class="contentBox">
+                  <div class="row w-100 justify-content-md-end pb-5" >
+                    <!--<div class="col-3"><div class="font-italic" style="font-size:medium;">Hit Count</div></div>-->
+                    <div class="col" id="hitCount" class="align-text-bottom font-italic font-weight-bold ml-2" style="letter-spacing: .3em;"></div>
+                </div>
                   <div class="row mb-5 w-100">
                   <a id="aboutJumpTo"><h5 class="align-text-bottom font-italic font-weight-light ml-2" style="letter-spacing: .3em;">About Me</h5></a>
                   </div>
