--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
       <div class="container-fluid bg font-color-w">
         <div class="row d-flex justify-content-center pt-3 pb-5">
           <div class="col-8 d-flex justify-content-around header resize-header pb-5" style="letter-spacing: 2em;">
-            <div>Design</div>
-            <div>-</div>
-            <div>Build</div>
-            <div>-</div>
-            <div>Deploy</div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
           </div>
         </div>
         <div class="row pt-5">
