--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
             <div class="col-md pl-5">
                     <div class="row">
                           <div class="col-md-2 flex-column pb-3">
-                            <button class="btn btn-secondary mb-3" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" aria-expanded="false" aria-controls="contactForm" active="false">
+                            <!--<button class="btn btn-secondary mb-3" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" aria-expanded="false" aria-controls="contactForm" active="false">
                               contact
-                            </button>
+                            </button>--->
                               <button class="btn btn-secondary mb-4 pr-5 pl-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" active="true">
                                   menu  
                               </button>
@@ -255,8 +255,8 @@
             <p class="d-flex justify-content-center">Baltimore, MD </p>
         </div>
     </body>
-
-    <!-- Modal -->
+    </html>
+    <!-- Modal 
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -319,7 +319,7 @@
 </div>
 
 
-    <!-- Scrollable modal 
+     Scrollable modal 
     <div class="modal-dialog modal-dialog-scrollable" id="contactForm">
       <form class="row g-3">
       <div class="col-md-6">
@@ -368,4 +368,3 @@
 </div>-->
 
 
-</html>
