troubleshooting browser compat

--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
                       </div>
                       <div class="row pb-1 px-3 pt-5">
                         <div class="col-6 d-flex justify-content-start">
-                          <p class="font-blue"><span>&copy; </span> 2023 All rights are reserved.</p>
+                          <p style="color:black;"><span>&copy; </span> 2023 All rights are reserved.</p>
                         </div>
                         <div class="col-6 d-flex justify-content-end">
-                          <p class="font-blue">Baltimore, MD</p>
+                          <p style="color:black;">Baltimore, MD</p>
                         </div>
                       </div>
                 </div>
